--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ header {
   width: 100%;
   border: 3px solid #2196f3;
   background-color: #9e9e9e73;
-  padding: 5px;
+  padding: 10px;
   margin-bottom: 15px;
 }
 section {
@@ -27,6 +27,7 @@ section {
 }
 .box {
   position: relative;
+  width: 100%;
   height: 100px;
   transform-style: preserve-3d;
   background-color: #333;
@@ -60,8 +61,10 @@ section {
 .box .front::before {
   content: "!";
   color: #fff;
-  font-size: 60px;
+  font-size: 4rem;
   font-weight: bold;
+  line-height: .9;
+
 }
 
 .box .back {
