--- a/main.css
+++ b/main.css
@@ -7,6 +7,29 @@ body {
   justify-content: center;
   align-items: center;
 }
+.start {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(3, 169, 244, 0.9);
+}
+.start span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f44336;
+  color: #fff;
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
 .memory {
   max-width: 600px;
 }
@@ -63,8 +86,7 @@ section {
   color: #fff;
   font-size: 4rem;
   font-weight: bold;
-  line-height: .9;
-
+  line-height: 0.9;
 }
 
 .box .back {
